--- a/Blogs/苏剑林/系列-低秩近似之路.md
+++ b/Blogs/苏剑林/系列-低秩近似之路.md
@@ -684,5 +684,58 @@ $$
 
 **如果 $M\in \mathbb{R}^{n\times m} = U\Sigma V^{\mathsf{T}}$, 那么 $M$ 的最优 $r$ 秩近似为 $U_{[:n,:r]}\Sigma_{[:r,:r]}V_{[:m,:r]}^{\mathsf{T}}$**
 
-这称为 Eckart-Young-Mirsky 定理.
+这称为 **Eckart-Young-Mirsky 定理**.
+
+前面低秩近似小节中知道可以通过 SVD 将一般矩阵的最优 $r$ 秩近似简化为非负对角矩阵的 $r$ 秩近似, 所以上述定理相当于说非负对角矩阵的最优 $r$ 阶近似就是只保留对角线最大的 $r$ 个元素的矩阵.
+虽然结论很符合直觉, 但它确实不是显然成立的. #TODO ?
+
+下面我们聚焦于求解:
+
+$$
+    \min_{A,B}\|AB-\Sigma \|_F^2
+$$
+
+若给定 $A$, 那么 $B=A^\dagger \Sigma$, 所以有:
+
+$$
+    \min_{A,B} \| AB-\Sigma \|_F^2 = \min_{A}\| (AA^\dagger -I_n)\Sigma \|_F^2
+$$
+
+设 $A=U_A\Sigma_A V_A^{\mathsf{T}}$, 则 $A^\dagger=V_A\Sigma_A^\dagger U_A^{\mathsf{T}}$, 所以:
+
+$$
+    \begin{aligned} 
+    \Vert (AA^{\dagger} - I_n)\Sigma\Vert_F^2 =&\, \Vert (U_A\Sigma_A V_A^{\mathsf{T}}V_A \Sigma_A^{\dagger} U_A^{\mathsf{T}} - I_n)\Sigma\Vert_F^2 \\ 
+    =&\, \Vert (U_A\Sigma_A \Sigma_A^{\dagger} U_A^{\mathsf{T}} - I_n)\Sigma\Vert_F^2 \\ 
+    =&\, \Vert U_A (\Sigma_A \Sigma_A^{\dagger} - I_n)U_A^{\mathsf{T}}\Sigma\Vert_F^2 \\ 
+    =&\, \Vert (\Sigma_A \Sigma_A^{\dagger} - I_n)U_A^{\mathsf{T}}\Sigma\Vert_F^2 \\ 
+    \end{aligned}
+$$
+
+由伪逆的计算公式知道 $\Sigma_A\Sigma_A^\dagger$ 是一个对角阵, 并且对角线上前 $r_A$ 个元素为 1, 其余为 0.
+所以 $(\Sigma_A \Sigma_A^{\dagger} - I_n)U_A^{\mathsf{T}}$ 相当于只保留了 $U_A^{\mathsf{T}}$ 的后 $k=n-r_A$ 行, 最终可以简化为:
+
+$$
+    \min_{A}\| (AA^\dagger -I_n)\Sigma \|_F^2 = \min_{k,U} \| U\Sigma \|_F^2
+$$
+
+根据 $F$ 范数定义可以写出
+
+$$
+    \Vert U\Sigma\Vert_F^2=\sum_{i=1}^k \sum_{j=1}^n u_{i,j}^2 \sigma_j^2 =\sum_{j=1}^n \sigma_j^2 \underbrace{\sum_{i=1}^k u_{i,j}^2}_{w_j}=\sum_{j=1}^n \sigma_j^2 w_j
+$$
+
+注意到 $w_j\in [0,1]$ 且 $\sum w_j = k$, 在此约束下右端的最小值只能是最小的 $k$ 个 $\sigma_j^2$ 之和, 又因为 $\sigma_j$ 已经降序排列.
+所以:
+
+$$
+    \min_{k,U}\Vert U\Sigma\Vert_F^2=\min_k \sum_{j=n-k+1}^n \sigma_j^2 = \sum_{j=r+1}^n \sigma_j^2
+$$
+
+也就是 $\Sigma$ 与其最优 $r$ 秩近似的误差 ($F$ 范数平方) 是 $\sum_{j=r+1}^n \sigma_j^2$. 这正好是保留对角线最大的 $r$ 个元素后所产生的误差.
+
+所以我们证明了 "非负对角阵的最优 $r$ 阶近似就是只保留对角线最大的 $r$ 个元素的矩阵".
+当然这只能说是一个解, 并没有否定多解的可能性.
+
+值得指出的一点是, Eckart-Young-Mirsky 定理不仅对 $F$ 范数成立, 对谱范数也成立, 后者的证明甚至更简单一点. 可以参阅[维基百科](https://en.wikipedia.org/wiki/Low-rank_approximation).
 
