--- a/Models/Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md
+++ b/Models/Speech_Neural_Codec/2023.06.11_Descript-Audio-Codec.md
@@ -44,14 +44,14 @@
 
 ## Abstract: 摘要
 
-> Language models have been successfully used to model natural signals, such as images, speech, and music. 
-> A key component of these models is a high quality neural compression model that can compress high-dimensional natural signals into lower dimensional discrete tokens. 
-> To that end, we introduce a high-fidelity universal neural audio compression algorithm that achieves ~90x compression of 44.1 KHz audio into tokens at just 8kbps bandwidth. 
-> We achieve this by combining advances in high-fidelity audio generation with better vector quantization techniques from the image domain, along with improved adversarial and reconstruction losses. 
-> We compress all domains (speech, environment, music, etc.) with a single universal model, making it widely applicable to generative modeling of all audio. 
-> We compare with competing audio compression algorithms, and find our method outperforms them significantly. 
-> We provide thorough ablations for every design choice, as well as open-source code and trained model weights. 
-> We hope our work can lay the foundation for the next generation of high-fidelity audio modeling.
+Language models have been successfully used to model natural signals, such as images, speech, and music. 
+A key component of these models is a high quality neural compression model that can compress high-dimensional natural signals into lower dimensional discrete tokens. 
+To that end, we introduce a high-fidelity universal neural audio compression algorithm that achieves ~90x compression of 44.1 KHz audio into tokens at just 8kbps bandwidth. 
+We achieve this by combining advances in high-fidelity audio generation with better vector quantization techniques from the image domain, along with improved adversarial and reconstruction losses. 
+We compress all domains (speech, environment, music, etc.) with a single universal model, making it widely applicable to generative modeling of all audio. 
+We compare with competing audio compression algorithms, and find our method outperforms them significantly. 
+We provide thorough ablations for every design choice, as well as open-source code and trained model weights. 
+We hope our work can lay the foundation for the next generation of high-fidelity audio modeling.
 
 语言模型已成功用于建模自然信号, 如图像语音和音乐.
 这些模型的关键组件是一个高质量的神经压缩模型, 能够将高维自然信号压缩成低维离散 Token.
