--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -3,33 +3,20 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: DiTTo-TTS: Efficient and Scalable Zero-Shot Text-to-Speech with Diffusion Transformer
+- 标题: "Title"
 - 作者:
-  - 01 [Keon Lee](../../Authors/Keon_Lee.md)
-  - 02 [Dong Won Kim](../../Authors/Dong_Won_Kim.md)
-  - 03 [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
-  - 04 [Jaewoong Cho](../../Authors/Jaewoong_Cho.md)
-- 机构:
-  - [KRAFTON.AI](../../Institutions/KOR-KRAFTON.AI.md)
-- 时间:
-  - 预印时间: 2024.06.17 ArXiv v1
-  - 更新笔记: 2024.06.18
-- 发表:
-  - 期刊/会议 
+  - 01 Keon Lee - KRAFTON.AI
+  - 02 Dong Won Kim - KRAFTON.AI
+  - 03 Jaehyeon Kim - KRAFTON.AI
+  - 04 Jaewoong Cho - KRAFTON.AI
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2406.11427)
-  <!-- - [DOI]()
-  - [Github]() -->
+  - [Publication]
+  - [Github]
   - [Demo](https://ditto-tts.github.io/)
-  - [Scholar](https://scholar.google.com/scholar?cluster=)
-- 标签:
-  - [语音合成](../../Tags/SpeechSynthesis.md)
-  - [零样本](../../Tags/Zero-Shot.md)
-  - [扩散模型](../../Tags/Model_Diffusion.md)
-- 页数: 21
-- 引用: 80
-- 被引: 0
-- 数据:
+- 文件:
+  - [ArXiv](_PDF/2406.11427v1__DiTTo-TTS__Efficient_&_Scalable_Zero-Shot_TTS_with_Diffusion_Transformer.pdf)
+  - [Publication]
 
 </details>
 
@@ -80,7 +67,7 @@ Additionally, we demonstrate that our model scales effectively with increases in
 
 ## 2.Related Works: 相关工作
 
-### Large-scale TTS 
+### Large-scale TTS
 Recently, large-scale TTS research progresses actively in two main directions: LLM-based autoregressive (AR) TTS and non-autoregressive (Non-AR) TTS.
 A prominent feature of LLMs is the scalability [16], [17] and their proficiency in zero-shot learning tasks, demonstrating significant capabilities without prior specific training on those tasks [18], [19], [20], [21].
 Efforts to replicate LLM’s capability in different modalities have shown progress, including vision [22], [23], [24] and audio ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [AudioLM](../../Models/Speech_LLM/2022.09.07_AudioLM.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md); [Qwen-Audio](../Speech_LLM/2023.11.14_Qwen-Audio.md)).
@@ -95,7 +82,7 @@ However, requiring supplementary data beyond speech-transcription pairs hinders 
 Similarly, [E3-TTS](2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
 However, both models have limitations in audio quality and impose a fixed length on the target audio, which is a significant constraint for speech generation.
 
-### Latent Diffusion Model (LDM) 
+### Latent Diffusion Model (LDM)
 [LDM](2021.12.20_LDM.md) improves modeling efficiency of the diffusion process model [1], [34] by operating in a latent space, achieving remarkable performance in generating realistic samples.
 Initially applied in image generation, their success is attributed to the reduced dimensionality of the latent space, facilitating efficient training and sampling ([LDM](2021.12.20_LDM.md)).
 Notably, guided diffusion [35], [36] has been expanded to various applications of LDMs, such as image editing [37] and image retrieval [38].
@@ -103,7 +90,7 @@ In the field of audio signals, techniques such as style transfer, inpainting, an
 In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) necessitates domain-specific elements such as phonemes, phoneme-level durations, and pitch.
 This is primarily due to the need for precise temporal alignment between text and speech, as well as the higher fidelity requirements inherent in audio data.
 
-### Neural Audio Codec 
+### Neural Audio Codec
 Neural audio codecs, which effectively compress various types of audio using neural networks, are used as part of many TTS systems ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md); [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)).
 Recent advancements employ an encoder-decoder architecture coupled with Residual Vector Quantization (RVQ) [41], [42], [43] to transform raw audio waves into discretized tokens.
 For example, [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md) converts 24,000 Hz mono waveforms into 75 Hz latents.
@@ -117,8 +104,8 @@ Another research direction of improving neural audio codecs for TTS systems is i
 <summary>原文</summary>
 
 We present a latent diffusion model (LDM) for TTS that enables the use of off-the-shelf pre-trained text and speech encoders without relying on speech domain-specific modeling, such as phoneme and duration.
-Toward this goal, we employ the following two approaches: 
-(1) introducing a speech length predictor that predicts the total length of the generated speech without relying on phoneme-level durations or requiring a fixed speech length; and 
+Toward this goal, we employ the following two approaches:
+(1) introducing a speech length predictor that predicts the total length of the generated speech without relying on phoneme-level durations or requiring a fixed speech length; and
 (2) fine-tuning the pre-trained neural audio codec using a pre-trained language model to enhance the alignment between text and speech embeddings.
 
 </details>
@@ -237,9 +224,9 @@ We denote the output of the text encoder by $z_{text}$.
 <summary>原文</summary>
 
 #### Neural Audio Codec
-A neural audio codec, which is parameterized by $\psi$, comprises of three components: 
-(1) an encoder that maps a speech into a sequence of latent representations $z_{speech}$; 
-(2) a vector quantizer converting the latent vector into the discrete code representation; and 
+A neural audio codec, which is parameterized by $\psi$, comprises of three components:
+(1) an encoder that maps a speech into a sequence of latent representations $z_{speech}$;
+(2) a vector quantizer converting the latent vector into the discrete code representation; and
 (3) a decoder that reconstructs the speech from a sequence of the quantized latent representations $z'_{speech}$.
 To enhance alignment between text and speech embeddings, we fine-tune the neural audio codec using the pre-trained language model.
 We introduce a learnable linear projection $f(\cdot)$ to match the dimension of the latent representation $z_{speech}$ to the language model's hidden space.
@@ -267,7 +254,7 @@ $$
 <details>
 <summary>原文</summary>
 
-where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)). 
+where $Loss_{NAC}(\psi)$ indicate the loss function which is used when the neural audio codec is pre-trained ([CLaM-TTS](../../Models/Speech_LLM/2024.04.03_CLaM-TTS.md)).
 $\lambda$ controls the contribution of $Loss_{LM}$, with $\lambda = 0$ indicating the pre-training phase.
 When $\lambda 0$, a pre-trained language decoder performs causal language modeling on text token sequences $x$, based on the speech latent vector $z_{speech}$.
 While the parameters of language model decoder are fixed, gradients are backpropagated to adjust the linear mappings $f(z_{speech})$.
@@ -300,7 +287,7 @@ We apply classifier-free guidance (CFG) [36] and adopt the diffusion noise sched
 
 #### 扩散模型
 
-给定文本嵌入 $z_{text}$ 和语音嵌入 $z_{speech}$, 
+给定文本嵌入 $z_{text}$ 和语音嵌入 $z_{speech}$,
 我们使用前文的目标损失训练扩散模型 $v_{\theta}(\cdot)$, 具体将 $x$ 替换为 $z_{text}$ 如下:
 
 $$
@@ -398,9 +385,9 @@ We presented ***DiTTo-TTS***, a latent diffusion model for text-to-speech (TTS) 
 We demonstrated that the proposed method shows exceptional zero-shot performance in naturalness, intelligibility, and speaker similarity, all without relying on domain-specific elements such as phonemes and durations, while simplifying the training process as well.
 In the process of obtaining this result, we also found that fine-tuning a speech autoencoder with an auxiliary language modeling objective can significantly enhance the text-speech alignment.
 Moreover, ***DiTTo-TTS*** shows effective scalability with respect to data and model sizes.
-Our future work includes: 
-(1) exploring various noise schedules to improve output quality and distillation methods to reduce inference times; 
-(2) enhancing pronunciation accuracy by improving character input normalization; 
+Our future work includes:
+(1) exploring various noise schedules to improve output quality and distillation methods to reduce inference times;
+(2) enhancing pronunciation accuracy by improving character input normalization;
 (3) enabling ***DiTTo*** to understand and learn from natural language instructions.
 
 </details>
