--- a/Models/Diffusion/2024.06.04_SimpleSpeech.md
+++ b/Models/Diffusion/2024.06.04_SimpleSpeech.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "Title"
+- 标题: "SimpleSpeech: Towards Simple and Efficient Text-to-Speech with Scalar Latent Transformer Diffusion Models"
 - 作者:
   - 01 Dongchao Yang - CUHK
   - 02 Dingdong Wang - CUHK
