--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "Title"
+- 标题: "SimpleSpeech 2: Towards Simple and Efficient Text-to-Speech with Flow-Based Scalar Latent Transformer Diffusion Models"
 - 作者:
   - 01 Dongchao Yang (杨东超)
   - 02 Rongjie Huang (黄融杰)
