--- a/Models/Diffusion/2024.09.18_DPI-TTS.md
+++ b/Models/Diffusion/2024.09.18_DPI-TTS.md
@@ -4,7 +4,7 @@
 <summary>基本信息</summary>
 
 - 标题: "DPI-TTS: Directional Patch Interaction for Fast-Converging and Style Temporal Modeling in Text-to-Speech"
-- 作者: 
+- 作者:
   - 01 Xin Qi
   - 02 Ruibo Fu
   - 03 Zhengqi Wen
@@ -18,25 +18,25 @@
   - 11 Xiaopeng Wang
   - 12 Yuankun Xie
   - 13 Yukun Liu
-  - 14 Xuefei Liu, 
+  - 14 Xuefei Liu,
   - 15 Guanjun Li
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/2409.11835)
-  - [Publication]() Submitted to ICASSP 2025
-  - [Github]()
-  - [Demo]()
-- 文件: 
-  - [ArXiv] #TODO
+  - [Publication] Submitted to ICASSP 2025
+  - [Github](https://github.com/7Xin/DPI-TTS)
+  - [Demo](https://7xin.github.io/DPI-TTS/)
+- 文件:
+  - [ArXiv](_PDF/2409.11835v1__DPI-TTS__Directional_Path_Interaction_for_Fast-Converging_&_Style_Temporal_Modeling_in_Text-to-Speech.pdf)
   - [Publication] #TODO
 
 </details>
 
 ## Abstract: 摘要
 
-In recent years, speech diffusion models have advanced rapidly. 
-Alongside the widely used U-Net architecture, transformer-based models such as the Diffusion Transformer (DiT) have also gained attention. 
-However, current DiT speech models treat Mel spectrograms as general images, which overlooks the specific acoustic properties of speech. 
-To address these limitations, we propose a method called Directional Patch Interaction for Text-to-Speech (DPI-TTS), which builds on DiT and achieves fast training without compromising accuracy. 
-Notably, DPI-TTS employs a low-to-high frequency, frame-by-frame progressive inference approach that aligns more closely with acoustic properties, enhancing the naturalness of the generated speech. 
-Additionally, we introduce a fine-grained style temporal modeling method that further improves speaker style similarity. 
+In recent years, speech diffusion models have advanced rapidly.
+Alongside the widely used U-Net architecture, transformer-based models such as the Diffusion Transformer (DiT) have also gained attention.
+However, current DiT speech models treat Mel spectrograms as general images, which overlooks the specific acoustic properties of speech.
+To address these limitations, we propose a method called Directional Patch Interaction for Text-to-Speech (DPI-TTS), which builds on DiT and achieves fast training without compromising accuracy.
+Notably, DPI-TTS employs a low-to-high frequency, frame-by-frame progressive inference approach that aligns more closely with acoustic properties, enhancing the naturalness of the generated speech.
+Additionally, we introduce a fine-grained style temporal modeling method that further improves speaker style similarity.
 Experimental results demonstrate that our method increases the training speed by nearly 2 times and significantly outperforms the baseline models.
