--- a/Models/Speech_Neural_Codec/2024.05.08_HILCodec.md
+++ b/Models/Speech_Neural_Codec/2024.05.08_HILCodec.md
@@ -1,12 +1,42 @@
 # HILCodec
 
-- 标题: HILCodec: High Fidelity and Lightweight Neural Audio Codec
+<details>
+<summary>基本信息</summary>
+
+- 标题: "HILCodec: High Fidelity and Lightweight Neural Audio Codec"
+- 作者:
+  - 01 Sunghwan Ahn,
+  - 02 Beom Jun Woo,
+  - 03 Min Hyun Han,
+  - 04 Chanyeong Moon,
+  - 05 Nam Soo Kim
+- 链接:
+  - [ArXiv](https://arxiv.org/abs/2405.04752)
+  - [Publication]
+  - [Github](https://github.com/aask1357/hilcodec)
+  - [Demo](https://aask1357.github.io/hilcodec/)
+- 文件:
+  - [ArXiv](_PDF/2405.04752v2__HILCodec__High-Fidelity_and_Lightweight_Neural_Audio_Codec.pdf)
+  - [Publication] #TODO
+
+</details>
 
 ## Abstract: 摘要
 
-The recent advancement of end-to-end neural audio codecs enables compressing audio at very low bitrates while reconstructing the output audio with high fidelity. 
-Nonetheless, such improvements often come at the cost of increased model complexity. In this paper, we identify and address the problems of existing neural audio codecs. 
-We show that the performance of Wave-U-Net does not increase consistently as the network depth increases. We analyze the root cause of such a phenomenon and suggest a variance-constrained design. 
-Also, we reveal various distortions in previous waveform domain discriminators and propose a novel distortion-free discriminator. 
+The recent advancement of end-to-end neural audio codecs enables compressing audio at very low bitrates while reconstructing the output audio with high fidelity.
+Nonetheless, such improvements often come at the cost of increased model complexity. In this paper, we identify and address the problems of existing neural audio codecs.
+We show that the performance of Wave-U-Net does not increase consistently as the network depth increases. We analyze the root cause of such a phenomenon and suggest a variance-constrained design.
+Also, we reveal various distortions in previous waveform domain discriminators and propose a novel distortion-free discriminator.
 The resulting model, ***HILCodec***, is a real-time streaming audio codec that demonstrates state-of-the-art quality across various bitrates and audio types.
 
+## 1.Introduction: 引言
+
+## 2.Related Works: 相关工作
+
+## 3.Methodology: 方法
+
+## 4.Experiments: 实验
+
+## 5.Results: 结果
+
+## 6.Conclusions: 结论
