--- a/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
+++ b/Models/_Full/2024.06.15_How_Should_We_Extract_Discrete_Audio_Tokens_from_Self-Supervised_Models.md
@@ -13,7 +13,7 @@
   - 06 [Cem Subakan](../../Authors/Cem_Subakan.md)
   - 07 [Mirco Ravanelli](../../Authors/Mirco_Ravanelli.md)
 - 机构:
-  - 机构 
+  - 机构
 - 时间:
   - 预印时间: 2024.06.15 ArXiv v1
   - 更新笔记: 2024.07.04
@@ -42,9 +42,9 @@
 
 ## Abstract: 摘要
 
-Discrete audio tokens have recently gained attention for their potential to bridge the gap between audio and language processing. 
+Discrete audio tokens have recently gained attention for their potential to bridge the gap between audio and language processing.
 Ideal audio tokens must preserve content, paralinguistic elements, speaker identity, and many other audio details.
-Current audio tokenization methods fall into two categories: Semantic tokens, acquired through quantization of Self-Supervised Learning (SSL) models, and Neural compression-based tokens (codecs). 
+Current audio tokenization methods fall into two categories: Semantic tokens, acquired through quantization of Self-Supervised Learning (SSL) models, and Neural compression-based tokens (codecs).
 Although previous studies have benchmarked codec models to identify optimal configurations, the ideal setup for quantizing pretrained SSL models remains unclear.
 >
 This paper explores the optimal configuration of semantic tokens across discriminative and generative tasks.
@@ -57,7 +57,7 @@ Learning effective, efficient, and robust representations is a core problem in m
 Over the past few years, continuous representations learned by large self-supervised models such as [Wav2Vec2](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md), [WavLM](../Speech_Representaion/2021.10.26_WavLM.md), and [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) have achieved unprecedented performance.
 A recent research trend consists of learning discrete audio representations instead of continuous ones, resulting in what is known as audio tokens.
 These discrete tokens offer several potential advantages.
-Firstly, they facilitate the development of audio language models (LMs) ([AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md); [VioLA](../Speech_LLM/2023.05.25_VioLA.md); [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [SpeechX](../Speech_LLM/2023.08.14_SpeechX.md)) and the creation of multi-modal large language models ([Gemini](../LLM/Gemini.md)), which can emit audio, text, and visual tokens.
+Firstly, they facilitate the development of audio language models (LMs) ([AudioLM](../Speech_LLM/2022.09.07_AudioLM.md); [AudioPaLM](../Speech_LLM/2023.06.22_AudioPaLM.md); [LauraGPT](../Speech_LLM/2023.10.07_LauraGPT.md); [VioLA](../Speech_LLM/2023.05.25_VioLA.md); [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md); [SpeechX](../Speech_LLM/2023.08.14_SpeechX.md)) and the creation of multi-modal large language models ([Gemini](../LLM/2023.12.19_Gemini.md)), which can emit audio, text, and visual tokens.
 Additionally, their compression potential can contribute to efficient data transmission and storage.
 Discrete tokens also enable us to address audio generation tasks such as speech enhancement and synthesis using classification methods, instead of relying on complex high-dimensional regression models.
 >
@@ -107,10 +107,10 @@ The following subsections will describe each module.
 
 ![](Images/2024.06.15.Fig.01.png)
 
-Figure.01: The proposed method for audio token extraction from SSL models: 
-(A) k-means discretizes the continuous representations of each layer, 
-(B) an attention mechanism merges the discrete layer representations, 
-(C) the mixed representations train acoustic models for discriminative and generative tasks, 
+Figure.01: The proposed method for audio token extraction from SSL models:
+(A) k-means discretizes the continuous representations of each layer,
+(B) an attention mechanism merges the discrete layer representations,
+(C) the mixed representations train acoustic models for discriminative and generative tasks,
 (D) our scalable vocoder generates waveforms (if needed).
 
 ### 3.1.Tokenizer
@@ -118,7 +118,7 @@ Figure.01: The proposed method for audio token extraction from SSL models:
 For quantization, we cluster five layers taken from two pretrained SSL models using the k-means algorithm independently for each layer.
 We consider two widely-used models: WavLM-large ([Checkpoints](https://huggingface.co/microsoft/wavlm-large)) and HuBERT-large ([Checkpoints](https://huggingface.co/facebook/hubert-large-ll60k)), both having 24 layers.
 We choose two layers from the lower part (3, 7) to capture fine-grained information, the middle layer (12), and two layers from the higher part (18, 23) for encoding content and meaning.
-This selection is based on observation from prior research ([WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/SUPERB.md)) which studied the contribution patterns of different layers across various tasks.
+This selection is based on observation from prior research ([WavLM](../Speech_Representaion/2021.10.26_WavLM.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md)) which studied the contribution patterns of different layers across various tasks.
 As a result, this set of discrete hierarchical tokens captures rich information from the original audio signal.
 Each of the K clusters is assigned a unique index.
 Additionally, we store the continuous coordinates of each centroid for studying the effect of initializing input embeddings in downstream acoustic models.
@@ -126,7 +126,7 @@ The outcome of this tokenization process is a tensor $\mathbf{d}$ of shape $B \t
 
 ### 3.2.Informed Layer Selector
 
-As evident from the SSL literature ([Zaiem2023Speech](../_Full/Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md); [SUPERB](../../Evaluations/SUPERB.md); [Zaiem2023FineTuning](Fine-Tuning_Strategies_for_Faster_Inference_Using_Speech_Self-Supervised_Models__A_Comparative_Study.md)), the choice of the layer within the SSL model significantly influences the performance of the downstream task of interest.
+As evident from the SSL literature ([Zaiem2023Speech](../_Full/Speech_Self-Supervised_Representations_Benchmarking__Are_We_Doing_it_Right?.md); [SUPERB](../../Evaluations/2021.05.03_SUPERB.md); [Zaiem2023FineTuning](Fine-Tuning_Strategies_for_Faster_Inference_Using_Speech_Self-Supervised_Models__A_Comparative_Study.md)), the choice of the layer within the SSL model significantly influences the performance of the downstream task of interest.
 This decision is equally critical for semantic tokens.
 Unlike prior methods that rely on heuristic layer selection ([SELM](../_tmp/SELM.md); [Speech Resynthesis](../_Full/Speech_Resynthesis_from_Discrete_Disentangled_Self-Supervised_Representations.md); [Chang2023Exploration](../_Full/Exploration_of_Efficient_E2E_ASR_Using_Discretized_Input_from_SSL.md)), we integrate the information from our hierarchical multi-layer audio tokens with an attention mechanism.
 The attention mechanisms comprise a straightforward multi-layer perceptron (MLP) fed by the embeddings of the audio tokens from each layer.
@@ -175,7 +175,7 @@ $$
 $$
 
 where `Sample($\cdot$)' randomly selects \( k \) layers from the discrete representations \( \mathbf{d} \), and \( V \) represents the vocoder function that outputs the waveform \( \mathbf{o} \).
-Layers are combined with an attention mechanism that assigns weights to different layers and ensures that the dimensionality of the embeddings remains consistent regardless of the number of layers. 
+Layers are combined with an attention mechanism that assigns weights to different layers and ensures that the dimensionality of the embeddings remains consistent regardless of the number of layers.
 The model is trained to decode audio by considering all possible combinations of layers.
 During inference, the desired combination of layers can be selected.
 In addition to its flexibility, this vocoder has demonstrated superior performance compared to vocoders trained on single layers, as we will show in [Results](#5results-结果).
@@ -215,7 +215,7 @@ The evaluation metric is accuracy (ACC).
 
 We utilize a non-autoregressive [Transformer](../_Transformer/2017.06.12_Transformer.md) encoder, which consists of 6 layers, 4 attention heads, a model dimension of 256, and a feed-forward layer dimension of 2048.
 Input tokens are extracted from the noisy signal, and target tokens from the clean one.
-Training is conducted end-to-end using cross-entropy loss. 
+Training is conducted end-to-end using cross-entropy loss.
 Noisy samples are generated by mixing clean samples from [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md) with noise from [WHAM!](../_tmp/WHAM!.md).
 The signal-to-noise ratios (SNRs) are uniformly distributed between 0 and 5 dB.
 Due to the misalignment of the vocoder's output with the target at the sample level, metrics like Si-SNR can be degraded.
@@ -256,11 +256,11 @@ Figure.03 depicts the average weights assigned to different layers in the WavLM 
 Conversely, for ASR, the upper layers become more crucial in capturing the semantic aspects of spoken utterances.
 In the case of ER and SID, the third layer receives the highest weight.
 Our findings align with the observed pattern in continuous representations (["Speech Self-Supervised Representations Benchmarking"](../_Full/2023.08.28_Speech_Self-Supervised_Representations_Benchmarking__A_Case_for_Larger_Probing_Heads.md)).
-For SE, all layers are equally weighted, indicating the necessity of all hierarchical levels to achieve optimal audio quality while preserving the semantic content of the input. 
+For SE, all layers are equally weighted, indicating the necessity of all hierarchical levels to achieve optimal audio quality while preserving the semantic content of the input.
 
 ### 5.3.Effect of Number of Clusters
 
-We train k-means models with both 1000 and 2000 centroids and examine the impact of the number of clusters across different tasks, as illustrated in Table.01. 
+We train k-means models with both 1000 and 2000 centroids and examine the impact of the number of clusters across different tasks, as illustrated in Table.01.
 In Generative tasks, TTS and SE, no significant differences are observed between models trained with 1000 and 2000 clusters.
 However, for ASR in both English and French, as well as ER, models with a higher number of clusters outperform those with fewer clusters.
 In the case of SID, the model trained with 1000 clusters exhibits comparable accuracy to the model with 2000 centroids.
@@ -272,12 +272,12 @@ For multi-modal LLMs where a single set of tokens is desired to solve multiple t
 We study various configurations for initializing the embedding layers of audio tokens (Table.01).
 Three options are considered:
 - Random initialization of the embedding layers,
-- Initialization of the embedding layer with the corresponding centroid's embedding, while freezing the layer, and 
+- Initialization of the embedding layer with the corresponding centroid's embedding, while freezing the layer, and
 - Initialization of the embedding layer with the corresponding centroid's embedding, without freezing the layer.
 
 Across all tasks, there is no advantage observed in initializing the embedding with pretrained centroid embeddings, and random initialization consistently outperforms it in all scenarios.
 However, discriminative tasks show greater benefits from random initialization, while generative tasks exhibit comparable performance across all three settings.
-This observation eliminates the need for having the same embedding size as the SSL models, allowing the choice of a smaller and more efficient embeddings. %In all tasks, except for ER, achieving better or comparable performance is possible when fine-tuning the pretrained embeddings rather than freezing them. 
+This observation eliminates the need for having the same embedding size as the SSL models, allowing the choice of a smaller and more efficient embeddings. %In all tasks, except for ER, achieving better or comparable performance is possible when fine-tuning the pretrained embeddings rather than freezing them.
 
 ### 5.5.Out-of-Distribution Generation
 
